# funticula

./: license  pyproject.toml  readme
.github/workflows/: lint.yaml
funticula/: __init__.py  cond.py
funticula/condensation/: condensation.py
funticula/condensation/functions/: dynamic_viscosity.py  kelvin_effect_module.py  mass_transport.py  mean_free_path.py  partial_pressure_module.py
funticula/funx/: dynamic_viscosity.py  kelvin_effect.py  knudsen_number.py  mass_transport.py  mean_free_path.py  partial_pressure.py  vapor_correction.py
funticula/test/: test_cond.py  test_repo.py
