[project]
name = "funticula"
description = "a simple, fast, and powerful funticula"
readme = "readme"
requires-python = ">=3.7"
license = {file = "license"}
authors = [
    {name = "funticulars", email="funticulars@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
keywords = [
    "funticula",
]

dependencies = ["numpy"]

# This is set automatically by flit using `funticula.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/uncscode/funticula"
repository = "https://github.com/uncscode/funticula"

[project.optional-dependencies]
dev = [
    "pylint", "pytest", "autopep8", "jupyterlab", "pytype",
    "typing", "build", "flake8", "jupyter-book", "ghp-import",
    "matplotlib", "numpy", "scipy",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
